# Reflector

./: AST.cpp  CMakeLists.Example.txt  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  FindCXXDeclAction.h  FindTypeAction.h  LICENSE  MetadataGenerator.cpp  Object.h  ParsingClass.cpp  ParsingClass.h  README.md  Reflect.cpp  Reflect.h  ReflectMatcher.h  Reflector.cpp  Tool.cpp  Tool.h  Traits.h  TypeWriter.cpp  TypeWriter.h
ASTDumpCpp/: AST.cpp
Mate/: Class.h  Field.h  Function.h  Type.cpp  Type.h
Meta/: Class.h  Type.cpp  Type.h  TypeTable.h
MetaRelect/: MetaType.h
ReflectorModule/: CMakeLists.Example.txt  CMakeLists.txt
ReflectorModule/Include/: Descriptor.h
ReflectorModule/Source/: Descriptor.cpp
Scripts/: PrintAST.bat  PrintAST.sh  PrintCXXDeclAST.bat  PrintCXXDeclAST.sh  build.bat  build.sh  cmake.bat
